# churnfm

./: Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
churnfm/: __init__.py  data.py  drift.py  eval.py  model.py  monitor.py
examples/: quickstart.py
tests/: test_churnfm.py
