[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "churnfm"
version = "0.1.0"
description = "A churn classifier with PSI drift detection and automated retraining."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahmed Doghri" }]
keywords = ["churn", "mlops", "drift-detection", "tabular", "monitoring", "ai", "ml"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/ahmeddoghri/churnfm"

[tool.hatch.build.targets.wheel]
packages = ["churnfm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
